--- a/Cliente_web/Cliente_webFront/package.json
+++ b/Cliente_web/Cliente_webFront/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@emailjs/browser": "^4.4.1",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
